# analyze

./: .gitignore  .stylish-haskell.yaml  LICENSE  Makefile  Paths_analyze.hs  README.md  analyze.cabal  circle.yml  stack.yaml
doc/: notes.txt
notebooks/: Demo.hhs
src/: Analyze.hs  Lib.hs
src/Analyze/: CFrame.hs  Common.hs  Conversions.hs  Csv.hs  DSL.hs  Datasets.hs  Decoding.hs  Html.hs  Ops.hs  PFrame.hs  RFrame.hs  Values.hs
test/: Datasets.hs  Fixtures.hs  Generation.hs  Spec.hs
