name:                analyze
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ejconlon/analyze#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Conlon
maintainer:          ejconlon@gmail.com
copyright:           2016 Eric Conlon
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Analyze
                     , Analyze.Common
                     , Analyze.Conversions
                     , Analyze.Csv
                     , Analyze.Decoding
                     , Analyze.Ops
                     , Analyze.RFrame
                     , Analyze.Values
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , bytestring
                     , cassava
                     , exceptions
                     , foldl
                     , free
                     , hashable
                     , profunctors
                     , text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite analyze-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Datasets
                     , Fixtures
                     , Generation
  build-depends:       base
                     , analyze
                     , aeson
                     , bytestring
                     , exceptions
                     , foldl
                     , QuickCheck
                     , unordered-containers
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/ejconlon/analyze
