name:                analyze
version:             0.1.0.0
synopsis:            making data science easy and safe with data frames
description:         Please see README.md
homepage:            https://github.com/ejconlon/analyze#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Conlon
maintainer:          ejconlon@gmail.com
copyright:           2016 Eric Conlon
category:            Data Science
build-type:          Simple
cabal-version:       >=1.10
Data-Files:          datasets/titanic/test.csv
                   , datasets/titanic/train.csv 

library
  hs-source-dirs:      src
  exposed-modules:     Analyze
                     , Analyze.Common
                     , Analyze.Conversions
                     , Analyze.Csv
                     , Analyze.Datasets
                     , Analyze.Decoding
                     , Analyze.Html
                     , Analyze.Ops
                     , Analyze.RFrame
                     , Analyze.Values
  other-modules:       Paths_analyze
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , binary
                     , bytestring
                     , cassava
                     , exceptions
                     , foldl
                     , free
                     , hashable
                     , lucid
                     , text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite analyze-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Fixtures
                     , Generation
  build-depends:       base
                     , analyze
                     , aeson
                     , bytestring
                     , exceptions
                     , foldl
                     , QuickCheck
                     , unordered-containers
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/ejconlon/analyze
